[package]
name = "indexer"
version = "0.1.0"
authors = ["Mike Goelzer <mike@protocol.ai>"]
edition = "2018"

[dependencies]
jsonrpsee = { path = "../jsonrpsee" }
env_logger = "0.7.1"
async-std = "1.6.2"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56" , features = ["preserve_order"] }
typename = "0.1.2"
