[package]
name = "indexer"
version = "0.1.0"
authors = ["Mike Goelzer <mike@protocol.ai>"]
edition = "2018"

[dependencies]
jsonrpsee = { path = "../jsonrpsee" }
async-std = "1.6.2"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56" , features = ["preserve_order"] }
typename = "0.1.2"
log = "0.4.11"
env_logger = "0.7.1"
